now able to display exact error messge from server, added a tip message just in case the site is accessed incorrectly, added come comments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
   <p class="text-center text-info mt-3 ml-3">Password Reset Form</p>
 </nav>
 <router-outlet></router-outlet>
+<p class="text-info m-5">Tip: Make sure you accessed this site through the link provided to you in your email.</p>
